# ctt_server

./: .gitignore  Cargo.toml  README.md  conf_ex.yaml  ctt_server.service  cttd.service  flake.nix  pyproject.toml
.gitea/workflows/: package.yaml
.github/workflows/: deps.yml  formating.yml
src/: auth.rs  changelog.rs  conf.rs  hello.py  main.rs  model.rs  pbs_sync.rs  setup.rs  sync.rs
src/cluster/: gust.rs  mod.rs  regex_cluster.rs  scheduler.rs  shasta.rs  shell_cluster.rs
src/cluster/scheduler/: mod.rs  pbs_scheduler.rs  shell_scheduler.rs
src/entities/: comment.rs  issue.rs  mod.rs  prelude.rs  target.rs
src/migrator/: m20220101_000001_create_table.rs  mod.rs
src/model/: mod.rs  mutation.rs  query.rs
