[package]
name = "ctt_server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Graphql api for CTT"
repository = "https://github.com/Will-Shanks/ctt_server"

[dependencies]
# TODO don't get from git after updates to axum 0.7
# https://github.com/async-graphql/async-graphql/pull/1431
async-graphql = { git = "https://github.com/davidpdrsn/async-graphql.git", rev = "62f1a65", features = ["tracing", "chrono"] }
async-graphql-axum = { git = "https://github.com/davidpdrsn/async-graphql.git", rev = "62f1a65"}
async-trait = "0.1"
axum = "0.7"
# TODO don't get from git after updates to axum 0.7
# https://github.com/programatik29/axum-server/issues/101
axum-server = { git = "https://github.com/programatik29/axum-server.git", rev = "e575e90", features = ["tls-rustls"] }
chrono = {version = "0.4", features = ["serde"] }
futures-util = "0.3"
http = "1"
http-body = "1"
jsonwebtoken = "9"
lazy_static = "1"
munge_auth = "0.1.1"
pbs = { version = "0.0.5", optional = true }
rand = "0.8"
sea-orm = { version="0.12", features = ["with-chrono", "sqlx-sqlite", "runtime-tokio-rustls", "macros"]}
sea-orm-migration = "0.12"
serde = {version="1", features = ["derive"] }
serde_json = "1"
slack-morphism = { version = "1", features = ["axum"], optional = true}
tokio = {version = "1", features = ["full"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["trace", "auth", "validate-request"] }
tracing = "0.1"
tracing-subscriber = "0.3"
users = "0.11"

[features]
default = ["pbs", "slack", "auth", "gust"]
slack = ["slack-morphism"]
auth = []
gust = []


[package.metadata.generate-rpm]
assets = [
    { source = "target/release/pbs_cmds", dest = "/opt/ncar/sbin/ctt_server", mode = "755" },
]

