[package]
name = "ctt_server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Graphql api for CTT"
repository = "https://github.com/Will-Shanks/ctt_server"

[dependencies]
async-graphql = { version = "7", features = ["tracing", "chrono"] }
async-graphql-axum =  "7"
async-trait = "0.1"
axum = "0.7"
axum-server = { version = "0.6", features = ["tls-rustls"] }
chrono = {version = "0.4", features = ["serde"] }
config = "0.13"
futures-util = "0.3"
http = "1"
http-body = "1"
jsonwebtoken = "9"
lazy_static = "1"
munge_auth = "0.1.1"
pbs = { version = "0.0.6", optional = true }
rand = "0.8"
sea-orm = { version="0.12", features = ["with-chrono", "sqlx-sqlite", "runtime-tokio-rustls", "macros"]}
sea-orm-migration = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slack-morphism = { version = "1", features = ["axum"], optional = true}
tokio = {version = "1", features = ["full"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["trace", "auth", "validate-request"] }
tracing = "0.1"
tracing-subscriber = "0.3"
users = "0.11"

[features]
default = ["pbs", "slack", "auth", "gust"]
slack = ["slack-morphism"]
auth = []
gust = []


[package.metadata.generate-rpm]
assets = [
    { source = "target/release/pbs_cmds", dest = "/opt/ncar/sbin/ctt_server", mode = "755" },
]

