[package]
name = "cttd"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Graphql api for CTT"
repository = "https://github.com/Will-Shanks/ctt_server"

[dependencies]
async-graphql = { version = "7", features = ["tracing", "chrono"] }
async-graphql-axum =  "7"
async-trait = "0.1"
axum = "0.7"
axum-server = { version = "0.6", features = ["tls-rustls"] }
chrono = {version = "0.4", features = ["serde"] }
config = "0.14"
futures-util = "0.3"
http = "1"
http-body = "1"
jsonwebtoken = "9"
lazy_static = "1"
munge_auth = "0.1.1"
pbs = "0.0.6"
rand = "0.8"
sea-orm = { version="0.12", features = ["with-chrono", "sqlx-sqlite", "runtime-tokio-rustls", "macros"]}
sea-orm-migration = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slack-morphism = { version = "2", features = ["axum"], optional = true}
tokio = {version = "1", features = ["full"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5", features = ["trace", "auth", "validate-request"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
users = "0.11"
regex = "1"

[features]
default = ["slack"]
slack = ["slack-morphism"]
auth = []


[package.metadata.generate-rpm]
assets = [
    { source = "target/release/cttd", dest = "/opt/ncar/bin/cttd", mode = "755" },
    { source = "conf_ex.yaml", dest = "/opt/ncar/etc/ctt/conf_ex.yaml", mode = "644", config = true },
    { source = "cttd.service", dest = "/opt/ncar/systemd/cttd.service", mode = "644" },
]

